<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_page"
        android:title="@string/home_button"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/about_page"
        android:title="@string/about_button"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_page"
        android:title="@string/menu_button"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/calorie_page"
        android:title="@string/calorie_button"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sales_page"
        android:title="@string/sales_button"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/contact_page"
        android:title="@string/contact_button"
        app:showAsAction="ifRoom" />
</menu>
